--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <div class="lg-img"><img src="../Project_8/images/logo.svg" alt="logo" class="logo"></div>
+        <div class="lg-img"><img src="./images/logo.svg" alt="logo" class="logo"></div>
         <div class="navigation">
             <div class="nav-bar">
                 <div class="btn"><button class="search"></button></div>
@@ -42,10 +42,10 @@
                 <h2>is your <br> ingredients</h2>
             </div>
             <div class="cr3">
-                <img src="/Project_14/images/Twitter Icon.svg" alt="" class="twitter">
-                <img src="/Project_14/images/Instagram Icon.svg" alt="" class="insta">
-                <img src="/Project_14/images/Facebook Icon.svg" alt="" class="fb">
-                <img src="/Project_14/images/Email Icon.svg" alt="" class="mail">
+                <img src="./images/Twitter Icon.svg" alt="" class="twitter">
+                <img src="./images/Instagram Icon.svg" alt="" class="insta">
+                <img src="./images/Facebook Icon.svg" alt="" class="fb">
+                <img src="./images/Email Icon.svg" alt="" class="mail">
             </div>
         </div>
     </div>
@@ -90,10 +90,10 @@
         <div class="mid">
             <span>&#8221;</span>
             <p>We help you to create best graphic <br> photos ,videos,animations and isllustration</p>
-            <img src="/Project_14/images/right-img.jpg" alt="" class="mid-img">
+            <img src="./images/right-img.jpg" alt="" class="mid-img">
         </div>
         <div class="right">
-            <img src="/Project_14/images/down.png" alt="">
+            <img src="./images/down.png" alt="">
         </div>
     </div>
 </body>
